# ReplyChallenge-25

./: README.md
andrea/: 0.txt  1-thunberg.txt  input.txt  test.py
edoardo/: out.txt  test.ipynb
edoardo/ouija/: pyproject.toml
edoardo/ouija/ouija/: main.py  parse.py  trial.py  trial2.py  trial3.py
ema/: game_logic.py  output.txt  test.ipynb  test.py
inputs/: 2-attenborough.txt  3-goodall.txt  4-maathai.txt  5-carson.txt  6-earle.txt  8-shiva.txt
sara/: game_logic.py  parser.py  test.ipynb
