[project]
name = "ouija"
version = "0.1.0"
description = ""
authors = [
    {name = "Edoardo W. G.",email = "egrappolini@reply.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
